feat: ai resume link addition in the home screen

--- a/index.html
+++ b/index.html
@@ -9,11 +9,29 @@
     />
     <meta name="author" content="Ranjithprabhu Kumar" />
 
-    <link rel="apple-touch-icon" sizes="76x76" href="./assets/images/favicon/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon/favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="./assets/images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./assets/images/favicon/favicon-16x16.png"
+    />
     <link rel="manifest" href="./assets/images/favicon/site.webmanifest" />
-    <link rel="mask-icon" href="./assets/images/favicon/safari-pinned-tab.svg" color="#5bbad5" />
+    <link
+      rel="mask-icon"
+      href="./assets/images/favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
 
@@ -127,6 +145,15 @@
                     >Senior Lead Developer | Technical Manager</span
                   >
                 </h3>
+                <h4>
+                  <a
+                    href="https://ranjithprabhuk.github.io/ai-resume/"
+                    target="_blank"
+                    class="ai-resume-link"
+                  >
+                    Click here to open AI Resume</a
+                  >
+                </h4>
               </div>
             </div>
             <div class="col-md-6">
