feat: addition of timeline to the personal page

--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
               <li><a href="#projects">Projects</a></li>
               <li>
                 <a
+                  href="https://ranjithprabhuk.github.io/timeline/"
+                  target="_blank"
+                  >Timeline</a
+                >
+              </li>
+              <li>
+                <a
                   href="https://www.linkedin.com/in/ranjithprabhu-k-2a5492a3/"
                   target="_blank"
                   ><span class="fa fa-linkedin"></span
